[gd_scene load_steps=13 format=3 uid="uid://eohxndqnij0x"]

[ext_resource type="Script" path="res://main.gd" id="1_7i1tr"]
[ext_resource type="Texture2D" uid="uid://cy7i2jvb0vhoe" path="res://assets/ui/colors.png" id="2_p126i"]
[ext_resource type="PackedScene" uid="uid://cq3v3io0y1kms" path="res://scenes/schematic.tscn" id="2_qticl"]
[ext_resource type="StyleBox" uid="uid://d2pelybf770tb" path="res://assets/ui/warning-panel.stylebox" id="3_3bxnd"]
[ext_resource type="Script" path="res://scenes/WarningPanel.gd" id="4_u4i6y"]
[ext_resource type="PackedScene" uid="uid://cbivksj5j1nmb" path="res://scenes/part_list.tscn" id="5_3p0gq"]
[ext_resource type="PackedScene" uid="uid://diox3mx04ljm" path="res://scenes/disassembler.tscn" id="5_ihm75"]
[ext_resource type="StyleBox" uid="uid://b4ts0xs184cax" path="res://assets/ui/popup-panel.stylebox" id="5_lbacc"]
[ext_resource type="PackedScene" uid="uid://0xeyeylg8w8k" path="res://scenes/settings_panel.tscn" id="6_t623a"]
[ext_resource type="PackedScene" uid="uid://b1a77l6rte3i" path="res://scenes/help_tabs.tscn" id="7_qqehi"]
[ext_resource type="PackedScene" uid="uid://cvfhme8tmg2c5" path="res://scenes/about_tabs.tscn" id="8_2rex3"]
[ext_resource type="PackedScene" uid="uid://k4j50g4q56tt" path="res://scenes/LearnTabs.tscn" id="8_41uro"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7i1tr")

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HB" type="HBoxContainer" parent="VB"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NewButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "New"

[node name="SaveButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Save"

[node name="SaveAsButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Save As"

[node name="LoadButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Load"

[node name="BlockButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Load As Block"

[node name="AddPartButton" type="Button" parent="VB/HB"]
unique_name_in_owner = true
layout_mode = 2
text = "Parts"

[node name="ToolsButton" type="MenuButton" parent="VB/HB"]
unique_name_in_owner = true
layout_mode = 2
text = "Tools"

[node name="SettingsButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Settings"

[node name="ClearLevelsButton" type="Button" parent="VB/HB"]
layout_mode = 2
tooltip_text = "Reset wire colors"
icon = ExtResource("2_p126i")

[node name="Spacer" type="Control" parent="VB/HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HelpButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Help"

[node name="LearnButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Learn"

[node name="AboutButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "About"

[node name="HB2" type="HBoxContainer" parent="VB"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VB/HB2"]
layout_mode = 2
text = " File: "

[node name="CurrentFile" type="Label" parent="VB/HB2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer2" type="Control" parent="VB/HB2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="LineEdit" parent="VB/HB2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Edit circuit title"
expand_to_text_length = true

[node name="Spacer3" type="Control" parent="VB/HB2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Schematic" parent="VB" instance=ExtResource("2_qticl")]
layout_mode = 2

[node name="WarningPanel" type="PopupPanel" parent="."]
size = Vector2i(106, 50)
always_on_top = true
theme_override_styles/panel = ExtResource("3_3bxnd")
script = ExtResource("4_u4i6y")

[node name="C" type="CenterContainer" parent="WarningPanel"]
offset_left = 20.0
offset_right = 86.0
offset_bottom = 50.0

[node name="Note" type="Label" parent="WarningPanel/C"]
layout_mode = 2
text = "Warning"

[node name="Confirm" type="ConfirmationDialog" parent="."]
title = "Quit without saving?"

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(900, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.circ ; Circuit files")

[node name="LoadHDL" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(900, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.hdl ; HDL files")

[node name="LoadHack" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(900, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.hack ; Hack files")

[node name="SaveDialog" type="FileDialog" parent="."]
title = "Save Circuit"
size = Vector2i(900, 500)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.circ ; Circuit files")

[node name="PartListPanel" type="PopupPanel" parent="."]
title = "Part Menu"
position = Vector2i(0, 36)
size = Vector2i(800, 590)
unresizable = false
borderless = false

[node name="PartList" parent="PartListPanel" instance=ExtResource("5_3p0gq")]
offset_left = 4.0
offset_top = 4.0
offset_right = 796.0
offset_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SettingsPanel" type="PopupPanel" parent="."]
title = "Settings"
size = Vector2i(533, 526)
borderless = false
theme_override_styles/panel = ExtResource("5_lbacc")

[node name="SettingsPanel" parent="SettingsPanel" instance=ExtResource("6_t623a")]
offset_right = 533.0
offset_bottom = 526.0

[node name="HelpPanel" type="PopupPanel" parent="."]
title = "Help"
size = Vector2i(800, 500)
unresizable = false
borderless = false

[node name="HelpTabs" parent="HelpPanel" instance=ExtResource("7_qqehi")]
offset_left = 4.0
offset_top = 4.0
offset_right = 796.0
offset_bottom = 496.0

[node name="LearnPanel" type="PopupPanel" parent="."]
title = "Learn"
size = Vector2i(800, 500)
unresizable = false
borderless = false

[node name="Learn" parent="LearnPanel" instance=ExtResource("8_41uro")]
offset_left = 4.0
offset_top = 4.0
offset_right = 796.0
offset_bottom = 496.0

[node name="AboutPanel" type="PopupPanel" parent="."]
title = "About"
position = Vector2i(0, 36)
size = Vector2i(700, 500)
unresizable = false
borderless = false

[node name="AboutTabs" parent="AboutPanel" instance=ExtResource("8_2rex3")]
offset_left = 4.0
offset_top = 4.0
offset_right = 696.0
offset_bottom = 496.0

[node name="Disassembler" parent="." instance=ExtResource("5_ihm75")]
visible = false
layout_mode = 0
offset_top = 0.0
offset_right = 390.0
offset_bottom = 550.0

[connection signal="pressed" from="VB/HB/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="VB/HB/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VB/HB/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="VB/HB/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VB/HB/BlockButton" to="." method="_on_block_button_pressed"]
[connection signal="pressed" from="VB/HB/AddPartButton" to="." method="_on_add_part_button_pressed"]
[connection signal="pressed" from="VB/HB/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VB/HB/ClearLevelsButton" to="." method="_on_clear_levels_button_pressed"]
[connection signal="pressed" from="VB/HB/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="VB/HB/LearnButton" to="." method="_on_learn_button_pressed"]
[connection signal="pressed" from="VB/HB/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="confirmed" from="Confirm" to="." method="_on_confirm_confirmed"]
[connection signal="canceled" from="LoadDialog" to="." method="_on_load_dialog_canceled"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="canceled" from="LoadHDL" to="." method="_on_load_dialog_canceled"]
[connection signal="file_selected" from="LoadHDL" to="." method="_on_load_hdl_file_selected"]
[connection signal="canceled" from="LoadHack" to="." method="_on_load_dialog_canceled"]
[connection signal="file_selected" from="LoadHack" to="." method="_on_load_hack_file_selected"]
[connection signal="canceled" from="SaveDialog" to="." method="_on_save_dialog_canceled"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_file_dialog_file_selected"]
